editors/tree-sitter-webfluent/grammar.js
    source_file: ($) => repeat($._declaration),

    // ─── Declarations ───────────────────────────────────────────────────

    _declaration: ($) =>
      choice(
        $.page_declaration,
        $.component_declaration,
        $.store_declaration,
        $.theme_declaration,
        $.app_declaration,
        $.type_declaration,
        $.enum_declaration,
        $.const_declaration,
        $.data_declaration,
        $.api_declaration,
        $.animation_declaration,
        $.test_declaration,
      ),

    // `const API = "/api"`
    const_declaration: ($) =>
      seq(
        "const",
        field("name", $._name),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
      ),

    // `data posts = "posts.json"` — a file's JSON, a constant at build time;
    // `image hero = "hero.jpg"` — a picture the build processes.
    api_declaration: ($) =>
      seq(
        "api",
        field("name", $._name),
        optional(seq("from", field("from", $.string))),
        optional(field("settings", $.api_settings)),
        optional(field("body", $.api_body)),
      ),

    api_settings: ($) => seq("(", sepBy($.named_argument, ","), optional(","), ")"),

    api_body: ($) =>
      braced($, repeat(choice($.api_headers, $.event_handler, $.endpoint, $.api_setting))),

    // `timeout: 10.seconds`, `retry: .backoff(times: 3)` — a setting of the
    // service, or of a connection.
    api_setting: ($) =>
      seq(field("name", $.identifier), ":", field("value", $._expression), optional(",")),

    // `headers { Authorization: "Bearer {Session.token}"  Accept-Language: lang }`
    api_headers: ($) => seq("headers", braced($, repeat(seq($.header, optional(","))))),

    header: ($) =>
      seq(field("name", choice($.string, $.header_name)), ":", field("value", $._expression)),

    header_name: ($) => seq($._name, repeat(seq(token.immediate("-"), $._name))),

    // `get user(id: String) at "users/:id" -> User  errors { 422 -> Map }`
    endpoint: ($) =>
      prec.right(
        seq(
          field("method", choice("get", "post", "put", "patch", "delete", "head", "options")),
          field("name", $._name),
          optional(field("parameters", $.parameter_list)),
          optional(seq("at", field("path", $.string))),
          optional(seq("-", ">", field("returns", $._type))),
          repeat(choice($.endpoint_errors, $.endpoint_setting)),
        ),
      ),

    endpoint_errors: ($) => seq("errors", braced($, repeat(seq($.error_mapping, optional(","))))),

    error_mapping: ($) => seq(field("status", $.number), "-", ">", field("type", $._type)),

    // `cache: .swr(60.seconds)`, `as: .blob` — how one endpoint is called.
    page_declaration: ($) =>
      seq(
        "page",
        field("name", $._declaration_name),
        optional(field("attributes", $.page_attributes)),
        field("body", $.block),
      ),

    page_attributes: ($) => seq("(", sepBy(choice($.route_parameter, $.named_argument), ","), ")"),

    // `id: String` — a route parameter, told from an attribute by its type;
    // `String` is also a name an expression may be, so the parameter wins
    // where both readings survive.
    // Its type is never refined: `layout: Shell(crumb: "Blog")` is a call,
    // and a refined type written there would read as the same shape.
    type_declaration: ($) =>
      seq(
        "type",
        field("name", $._name),
        // `type Admin = User { … }`: every field of `User`, and these.
        optional(seq("=", field("base", $._name))),
        braced($, seq(sepBy($.field_declaration, optional(",")), optional(","))),
      ),

    field_declaration: ($) =>
      seq(
        field("name", $._name),
        ":",
        field("type", $._type),
        optional(seq("=", field("default", $._expression))),
      ),

    // `enum Tone { calm, loud }`; a case may carry a payload:
    // `enum Status { idle, failed(reason: String) }`.
    _declaration_name: ($) => choice($._name, $.builtin_component),

    _name: ($) => choice($.identifier, $.component_identifier),

    // ─── Parameters and types ───────────────────────────────────────────

    parameter_list: ($) => seq("(", sepBy($.parameter, ","), ")"),

    // `_ label: String` marks the one positional prop.
    parameter: ($) =>
      seq(
        optional(field("positional", "_")),
        field("name", $._name),
        ":",
        field("type", $._type),
        optional(seq("=", field("default", $._expression))),
      ),

    _type: ($) =>
      choice($.builtin_type, $.list_type, $.optional_type, $.refined_type, $.named_type),

    // `Number(1..=30)`, `String(minLength: 8)`, `Date(after: @2026-01-01)` —
    // a type with a condition its values must meet.
    refined_type: ($) =>
      seq(
        field("base", choice($.builtin_type, $.named_type)),
        "(",
        sepBy1($._argument, ","),
        optional(","),
        ")",
      ),

    builtin_type: (_) => choice("String", "Number", "Bool", "Map", "Any"),

    list_type: ($) => seq("[", $._type, "]"),

    named_type: ($) => $.component_identifier,

    // ─── Statements ─────────────────────────────────────────────────────

    // Statements are separated by lines; `;` puts two on one.
    block: ($) => braced($, repeat(seq($._statement, optional(";")))),

    _statement: ($) =>
      choice(
        $.state_declaration,
        $.derived_declaration,
        $.effect_declaration,
        $.action_declaration,
        $.use_declaration,
        $.resource_declaration,
        $.validate_declaration,
        $.connection_declaration,
        $.event_declaration,
        $.slot_declaration,
        $.part_declaration,
        $.timer_statement,
        $.cleanup_block,
        $.head_block,
        $.expect_statement,
        $.act_statement,
        $.let_declaration,
        $.try_statement,
        $.if_statement,
        $.for_statement,
        $.show_statement,
        $.sequence_statement,
        $.match_statement,
        $.navigate_statement,
        $.log_statement,
        $.return_statement,
        $.emit_statement,
        $.children,
        $.event_handler,
        $.style_block,
        $.transition_block,
        $.slot_fill,
        $.call_statement,
        $.element,
        $.assignment,
        $.expression_statement,
      ),

    // `state n = 0`; `persist theme = "light"` is kept across visits, and
    // may say where, at what version, and how an older value is brought
    // forward.
    state_declaration: ($) =>
      seq(
        choice("state", "persist"),
        field("name", $._name),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
        // Only a `persist` carries one, and the parser knows it from the
        // keyword; here it is the brace that follows the value.
        optional(field("policy", $.persist_policy)),
      ),

    derived_declaration: ($) =>
      seq(
        "derived",
        field("name", $._name),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
      ),

    // `validate email { required  minLength(8) "Use at least 8"  async "Taken" { … } }`
    validate_declaration: ($) =>
      seq("validate", field("name", $._name), braced($, repeat($.validation_rule))),

    validation_rule: ($) =>
      prec.right(
        seq(
          field("rule", $.identifier),
          optional(field("arguments", $.arguments)),
          optional(field("message", $.string)),
          // `custom "…" { expr }` and `async "…" { await … }` say what to check.
          optional(seq("{", field("check", $._expression), "}")),
        ),
      ),

    // `socket chat = ws("wss://…") { send Out  receive In  on message(m) { } }`,
    // `stream ticks = sse("/events")`, `channel cart = broadcast("cart") { … }`,
    // `peer link = rtc(signal: m => room.post(m)) { … }`.
    connection_declaration: ($) =>
      prec.right(
        seq(
          field("kind", choice("socket", "stream", "channel", "peer")),
          field("name", $._name),
          "=",
          field("value", $._expression),
          optional(field("body", $.connection_body)),
        ),
      ),

    connection_body: ($) =>
      braced($, repeat(choice($.message_type, $.event_handler, $.api_setting))),

    message_type: ($) => seq(field("direction", choice("send", "receive")), field("type", $._type)),

    log_statement: ($) => seq("log", "(", $._expression, ")"),

    // `return` alone at the end of a block, or `return expr`.
    match_statement: ($) =>
      seq("match", field("value", $._expression), braced($, repeat($.match_arm))),

    match_arm: ($) => seq(field("pattern", $._arm_pattern), field("body", $.block)),

    _arm_pattern: ($) =>
      choice(
        $.loading_pattern,
        $.error_pattern,
        $.ready_pattern,
        $.state_pattern,
        $.case_pattern,
        $.else_pattern,
      ),

    state_pattern: ($) =>
      seq(
        field("state", choice("connecting", "open", "closed")),
        optional(seq("(", field("name", $._name), ")")),
      ),

    // `.failed(reason)` binds the case's payload, one name per part.
    element: ($) =>
      prec.right(
        PREC.element,
        seq(
          field("name", $._element_name),
          optional(field("arguments", $.argument_list)),
          repeat(field("flag", $.flag)),
          optional(field("body", $.block)),
        ),
      ),

    _element_name: ($) => choice($.part, $.builtin_component, $.component_identifier),

    // `Table.Row`, `Card.Header`: a part of a built-in, or `Panel.Header`,
    // a part a component of the project declares — capitalised after the dot.
    _dot_word: (_) => token.immediate(seq(".", /[a-z_][a-zA-Z0-9_]*/)),

    // `List` is also a type; in element and expression position it is the
    // component, and a type is only ever read where one is expected.
    builtin_component: (_) => prec(1, choice(...BUILTIN_COMPONENTS)),

    // ─── Arguments ──────────────────────────────────────────────────────

    // Element arguments: one positional value first, then `name: value`
    // pairs. The precedence settles `Foo(x)` at the start of a statement as
    // an element rather than a call.
    argument_list: ($) => prec(1, seq("(", sepBy($._argument, ","), ")")),

    _argument: ($) => choice($.named_argument, $._expression),

    named_argument: ($) =>
      seq(field("name", $.attribute_name), ":", field("value", $._expression)),

    // `bind`, `aria-pressed`, `data-tone`: hyphenated because an HTML
    // attribute may be.
    attribute_name: ($) => seq($.identifier, repeat(seq("-", $.identifier))),

    // Call arguments; `name: value` is accepted so `t("greeting", name:
    // user.name)`, `fetch(url, method: "POST")` and `Todo(id: 1)` read as
    // one call each.
    arguments: ($) => seq("(", sepBy($._argument, ","), ")"),

    // ─── Events and slots ───────────────────────────────────────────────

    // `on click { }`, `on keydown(event) { }`, `on toggle(id) { }`.
    // `on click(e) { }`; `on key("ctrl+k") { }` names the key it answers to.
    event_handler: ($) =>
      seq(
        "on",
        field("event", $.identifier),
        optional(
          seq(
            "(",
            choice(
              seq(field("key", $.string), optional(seq(",", field("parameter", $._name)))),
              field("parameter", $._name),
            ),
            ")",
          ),
        ),
        field("body", $.block),
      ),

    // `every(1000) { tick() }`, `after(500) { hide() }`.
    slot_fill: ($) =>
      prec.dynamic(
        1,
        seq(
          field("name", $.identifier),
          optional(seq("(", sepBy1(field("parameter", $.identifier), ","), ")")),
          field("body", $.block),
        ),
      ),

    // ─── Style ──────────────────────────────────────────────────────────

    style_block: ($) =>
      seq("style", braced($, repeat(choice($.style_property, $.nested_rule)))),

    // `padding: 6px 0`, `--accent: {color}`, `background: $surface;`
    style_property: ($) =>
      seq(
        field(
          "name",
          choice($.property_name, $.vendor_property_name, $.custom_property_name),
        ),
        ":",
        field("value", $.style_value),
        optional(";"),
      ),

    // Raw CSS to the end of the line or a `;`, with tokens and splices.
    property_name: ($) =>
      seq(
        $.identifier,
        repeat(seq("-", choice($.identifier, seq($.number, optional($.identifier))))),
      ),

    // `-webkit-line-clamp`, `-moz-osx-font-smoothing` — a vendor prefix is
    // a property name that opens with a `-`, which is otherwise a
    // separator between two words of one.
    custom_property_name: (_) => token(seq("--", /[a-zA-Z_][a-zA-Z0-9_-]*/)),

    // ─── Transition ─────────────────────────────────────────────────────

    // `transition { background: 200ms ease-out }` — raw values, like a style.
    transition_block: ($) =>
      seq("transition", braced($, repeat($.style_property))),

    // ─── Assignment & expression statements ─────────────────────────────

    // `Store.load(id)` — a call on a store or component name, which at the
    // top of a page is set-up code. It outranks the element `Store` with a
    // flag `.load`, which could not take the parenthesis.
    call_statement: ($) =>
      prec(
        PREC.element + 1,
        seq(
          field("object", $.component_identifier),
          // `Backend.users.invalidate()`: the members on the way to the call.
          repeat(field("property", alias($._dot_word, $.property))),
          field("method", alias($._dot_word, $.method)),
          field("arguments", $.arguments),
        ),
      ),

    // `Ui.confirmId = d.id` — a store's member, written where a statement
    // starts, where a capitalised word is otherwise an element with flags.
    store_member: ($) =>
      prec(
        PREC.element + 1,
        seq(
          field("object", $.component_identifier),
          repeat1(field("property", alias($._dot_word, $.property))),
        ),
      ),

    assignment: ($) =>
      seq(
        field(
          "target",
          choice(
            $._name,
            $.member_expression,
            $.index_expression,
            $.store_member,
            // A state named `on`: the word is the event keyword only where a
            // handler can start, and a handler does not continue with `=`.
            alias("on", $.identifier),
          ),
        ),
        "=",
        field("value", $._expression),
      ),

    // A statement that is an expression does something: a call, a member
    // call, an `await`, or a bare name (a slot's content). A value — a
    // literal, an `if` or `match` value — is never a statement on its own,
    // which is what keeps `if a { go() }` the statement and `.lg { }`
    // after an element its flag and block.
    expression_statement: ($) =>
      prec.dynamic(
        1,
        choice(
          $.call_expression,
          $.member_expression,
          $.index_expression,
          $.unary_expression,
          $.identifier,
          $.component_identifier,
          $.builtin_component,
        ),
      ),

    // ─── Expressions ────────────────────────────────────────────────────

    _expression: ($) =>
      choice(
        $.range_expression,
        $.binary_expression,
        $.unary_expression,
        $.lambda,
        $.if_expression,
        $.match_expression,
        $._primary_expression,
      ),

    unary_expression: ($) =>
      prec(
        PREC.unary,
        seq(field("operator", choice("!", "-", "await")), field("operand", $._expression)),
      ),

    // `event` is a keyword where a statement starts, so a handler's
    // `event.preventDefault()` names it by its keyword; everywhere else the
    // word lexes as a plain name.
